deploy: 8b2a606d482787b5294c74723a7e30fd3358c6be

--- a/404.html
+++ b/404.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>VuePress Docs Boilerplate</title>
-    <meta name="description" content="Starter template for a VuePress project - including CI for GH Pages hosting">
+    <title>Guía y FAQ de Telematic</title>
+    <meta name="description" content="This site provides an explanatory Guide of Telematic, a virtual academia for Maths and Science school support, as well as a FAQ.">
     <meta name="theme-color" content="#3eaf7c">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/vuepress-quickstart/assets/css/0.styles.3da2d0a5.css" as="style"><link rel="preload" href="/vuepress-quickstart/assets/js/app.17a2df1d.js" as="script"><link rel="prefetch" href="/vuepress-quickstart/assets/js/10.64de54bb.js"><link rel="prefetch" href="/vuepress-quickstart/assets/js/2.dd4257e1.js"><link rel="prefetch" href="/vuepress-quickstart/assets/js/3.18e3686a.js"><link rel="prefetch" href="/vuepress-quickstart/assets/js/4.33b97baa.js"><link rel="prefetch" href="/vuepress-quickstart/assets/js/5.54fc1797.js"><link rel="prefetch" href="/vuepress-quickstart/assets/js/6.49b16ec0.js"><link rel="prefetch" href="/vuepress-quickstart/assets/js/7.720465dc.js"><link rel="prefetch" href="/vuepress-quickstart/assets/js/8.d304a720.js"><link rel="prefetch" href="/vuepress-quickstart/assets/js/9.84af804c.js">
-    <link rel="stylesheet" href="/vuepress-quickstart/assets/css/0.styles.3da2d0a5.css">
+    <link rel="preload" href="/telematic/assets/css/0.styles.ddb19361.css" as="style"><link rel="preload" href="/telematic/assets/js/app.8f2c8332.js" as="script"><link rel="prefetch" href="/telematic/assets/js/10.66889247.js"><link rel="prefetch" href="/telematic/assets/js/11.500bcb29.js"><link rel="prefetch" href="/telematic/assets/js/12.e686014a.js"><link rel="prefetch" href="/telematic/assets/js/13.c06696f2.js"><link rel="prefetch" href="/telematic/assets/js/14.c5991b65.js"><link rel="prefetch" href="/telematic/assets/js/15.8d529c2e.js"><link rel="prefetch" href="/telematic/assets/js/2.dd4257e1.js"><link rel="prefetch" href="/telematic/assets/js/3.18e3686a.js"><link rel="prefetch" href="/telematic/assets/js/4.33b97baa.js"><link rel="prefetch" href="/telematic/assets/js/5.54fc1797.js"><link rel="prefetch" href="/telematic/assets/js/6.f610388a.js"><link rel="prefetch" href="/telematic/assets/js/7.01252059.js"><link rel="prefetch" href="/telematic/assets/js/8.18f160a7.js"><link rel="prefetch" href="/telematic/assets/js/9.2a7ca2de.js">
+    <link rel="stylesheet" href="/telematic/assets/css/0.styles.ddb19361.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-quickstart/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/vuepress-quickstart/assets/js/app.17a2df1d.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/telematic/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/telematic/assets/js/app.8f2c8332.js" defer></script>
   </body>
 </html>
